# OpenCv-Qt-KurulumBetigi-Uygulamalari

ColorDetectionProject/: CMakeLists.txt  main.cpp
FaceRecognitionProject/: CMakeLists.txt  main.cpp
FireDetectionProject/: CMakeLists.txt  main.cpp
ImageGalleryProject/: CMakeLists.txt  main.cpp
ImageGalleryProject/src/: camerawindow.cpp  camerawindow.h  gallerywindow.cpp  gallerywindow.h
